# EasyXT_KLC

./: .coveragerc  .env.example  .gitignore  .p0_baseline.json  .pre-commit-config.yaml  A 股市场行情数据规则标准化报告.txt  API文档.md  ENV_HEALTHCHECK.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  _diag_988.py  _diag_db.py  _diag_db2.py  _diag_db3.py  _full_after_board_loader_fix.txt  _full_reg_after_fix.txt  _full_run2e.txt  _full_test.txt  _sig_struct_test.txt  _signal_test.txt  _struct_test.txt  _test2.txt  _tmp_diag.py  _tst3.txt  check_out2.txt  cov_combined.json  development_rules.md  diagnose_grid_trades.py  gray_monitor.ps1  latest-console.txt  launch_grid_backtest.py  multi_source_crossval_output.txt  multi_source_crossval_report.md  multi_source_crossval_result.json  mypy.ini  pyproject.toml  pyright_out2.txt  pyrightconfig.main.json  pytest.ini  (+17 more)
.ci/: README_source_reconciliation.md  README_type_safety_gate.md  pyright_main_baseline.json
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-04-01T00-43-42-376Z.yml  page-2026-04-01T04-40-08-505Z.yml  page-2026-04-01T07-19-09-175Z.yml
101因子/: alpha_factors.py
PYPlugins/: py_strategy.cfg
code_converter/: README.md  __init__.py  api_mapping.json  cli.py  requirements.txt
config/: ENV_REFERENCE.md  akshare_routing.json  data_reconciliation_audit.json  duckdb_crash_baseline.example.json  error_handler_config.json  governance_action_rulebook.json  log_config.json  migration.py  period_registry.json  period_thresholds.json  production_template.json  real_trading.json  session_profile_rules.json  session_profile_versions.json  session_profiles.json  stage1_universe.yaml  unified_config.json  validate_config.py  watermark_approval_registry.example.json  xueqiu_config.json  xueqiu_config.json.example
configs/: peak_release_notify_oncall_policy.json
core/: account_registry.py  api_server.py  async_task_manager.py  audit_trail.py  cache_manager.py  daily_reset_scheduler.py  event_engine.py  event_types.py  events.py  performance_monitor.py  portfolio_optimizer.py  portfolio_risk.py  risk_config_loader.py  risk_engine.py  safe_thread_runner.py  signal_bus.py  slo_monitor.py  theme_manager.py  thread_manager.py  xtdata_lock.py  xtquant_import.py
data_manager/: __init__.py  auto_data_updater.py  backfill_dead_letter.jsonl  board_stocks_loader.py  builtin_factors.py  canonical_minute.py  csv_importer.py  dat_binary_reader.py  data_contract_validator.py  data_integrity_checker.py  datasource_registry.py  duckdb_connection_pool.py  duckdb_fivefold_adjust.py  factor_registry.py  financial_data_saver.py  golden_1d_audit.py  golden_1d_repair_orchestrator.py  governance_metadata.py  history_backfill_scheduler.py  local_rights_mapping.py  market_storage_topology.py  period_bar_builder.py  period_registry.py  pipeline_health.py  realtime_pipeline_manager.py  session_profile_registry.py  signal_generator.py  smart_data_detector.py  structure_bayesian_baseline.py  structure_dataset_builder.py  structure_engine.py  structure_schema.py  threshold_registry.py  timestamp_contract.py  timestamp_utils.py  unified_data_interface.py  universal_data_importer.py
docs/: 00_README_FIRST.md  01_architecture_design.md  02_modules_overview.md  03_migration_guide.md  04_development_standards.md  05_tauri_incremental_replacement_blueprint.md  05_thread_exit_safety_spec.md  06_dual_engine_state_contract.md  08_gui_app_legacy_freeze.md  09_frontend_reference_atlas.md  10_chart_facade_v2_draft.md  11_state_backup_restore_protocol.md  12_duckdb_federation_read_planner.md  13_docs_governance_matrix.md  14_release_governance_controls.md  15_phase_exit_criteria.md  16_qt_pyqt5_retirement_execution_checklist.md  17_gui_app_replacement_inventory.md  18_period_canonical_contract.md  19_period_canonical_implementation_blueprint.md  20_period_fact_schema_and_storage_model.md  21_easyxt_klc_final_full_report_2026-04-01.md  22_easyxt_klc_comprehensive_assessment_and_action_guide_2026-04-01.md  22_easyxt_klc_full_assessment_2026-04-02.md  23_data_governance_control_plane_closeout_2026-04-02.md  23_easyxt_klc_full_assessment_calibrated_2026-04-02.md  24_easyxt_klc_latest_full_assessment_and_action_guide_2026-04-02.md  DEVELOPMENT_RULES.md  README.md  REFACTOR_PROGRESS.md  architecture_roadmap_direction2.md  data_infra_slo_sli_spec.md  (+11 more)
easy_xt/: EasyFactor_README.md  README.md  __init__.py  advanced_trade_api.py  api.py  config.py  data_api.py  data_types.py  decorators.py  dragon_tiger.py  enhanced_data_api.py  enhanced_indicators.py  execution_algorithms.py  extended_api.py  factor_library.py  financial_data.py  fundamental_enhanced.py  install.bat  load_config.py  money_flow.py  pyproject.toml  sector_data.py  tdx_client.py  trade_api.py  triple_source_manager.py  types.py  utils.py  validators.py  xtquant_broker.py
easy_xt/alpha_analysis/: QUICKSTART.md  README.md  __init__.py  example_usage.py  factor_correlation.py  ic_ir_analysis.py  start_platform.py  start_platform_with_qmt.py  test_alpha_analysis.py
easy_xt/realtime_data/: __init__.py  api_server.py  config.py  config_manager.py  error_handler.py  http_server.py  log_manager.py  monitor_service.py  performance_benchmark.py  performance_monitor.py  push_service.py  recovery_manager.py  scheduler.py  service_manager.py  unified_api.py  validator.py  websocket_server.py
easy_xt/realtime_data/aggregator/: __init__.py  minute_bar_aggregator.py
easy_xt/realtime_data/cache/: __init__.py  cache_manager.py  cache_strategy.py  memory_cache.py  redis_cache.py
easy_xt/realtime_data/config/: __init__.py  realtime_config.json  settings.py
easy_xt/realtime_data/monitor/: __init__.py  alert_manager.py  api_monitor.py  data_source_monitor.py  integration.py  metrics_collector.py  monitor_dashboard.py  system_monitor.py
easy_xt/realtime_data/persistence/: __init__.py  duckdb_sink.py
easy_xt/realtime_data/providers/: __init__.py  base_provider.py  eastmoney_provider.py  eastmoney_provider_backup.py  eastmoney_provider_v2.py  tdx_provider.py  tdx_provider_enhanced.py  tdx_provider_optimized.py  ths_provider.py
(+743 files in other folders)
