[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "miniqmt-extended"
version = "1.0.0"
description = "MiniQMT扩展 - 基于迅投QMT的量化交易扩展工具包"
readme = "README.md"
authors = [{ name = "CodeBuddy", email = "noreply@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "matplotlib>=3.5.0",
  "requests>=2.25.0",
  "psutil>=5.9.0",
  "qstock>=1.0.0",
  "akshare>=1.9.0",
  "fastapi>=0.103.0",
  "uvicorn>=0.23.0",
  "pydantic>=1.10.0",
  "PyQt5>=5.15.0",
  "pillow>=8.0.0",
  "backtrader>=1.9.78"
]

[project.urls]
Homepage = "https://github.com/quant-king299/EasyXT"
Source = "https://github.com/quant-king299/EasyXT"

[project.scripts]
# 如需 CLI，可在相应模块内实现 main()
# miniqmt-cli = "miniqmt_extended.cli:main"

[tool.flit.module]
name = "easy_xt"

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "external",
  "myenv",
  "notebooks",
  "学习实例",
  "学习案例",
  "examples",
  "*.ipynb"
]
line-length = 100
target-version = "py39"
lint.select = ["E", "W", "F", "I", "UP"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "gui_app"]

[tool.ruff.lint.per-file-ignores]
"101因子/**" = ["E402", "E722", "F401", "F403", "F405", "F821"]
"easy_xt/**" = ["E402", "E722", "F401"]
"tools/**" = ["E402", "E722"]
"PYPlugins/**" = ["E722"]
"config/**" = ["E722"]
"strategies/**" = ["E722"]
"strategies/jq2qmt/**" = ["F403", "F405"]
"gui_app/widgets/grid_trading_widget.py" = ["E402"]
"data_manager/universal_data_importer.py" = ["E402"]
"diagnose_grid_trades.py" = ["E402"]
"launch_grid_backtest.py" = ["E402"]

[tool.coverage.run]
source = ["core", "gui_app", "tools", "easy_xt", "data_manager"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/venv/*",
  "*/env/*",
  "*/myenv/*"
]

[tool.coverage.report]
fail_under = 25
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError"
]

[tool.coverage.targets]
short_term = 25
mid_term = 35
long_term = 50

[tool.coverage.html]
directory = "htmlcov"
title = "EasyXT Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"
