[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "easy-xt"
version = "0.1.0"
description = "Unified helpers and adapters for miniQMT / EasyXT integration"
readme = "README.md"
authors = [{ name = "MiniQMT Team", email = "noreply@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "pydantic>=1.10,<3",
  "requests>=2.31"
]

[project.urls]
Homepage = "https://example.com/easy-xt"
Source = "https://example.com/easy-xt"

[project.scripts]
# 如需 CLI，可在 easy_xt/cli.py 内实现 main()
# easyxt-cli = "easy_xt.cli:main"
